# video-editor

./: .gitignore  CMakeLists.txt  LICENSE-MIT  README.md  main.cpp
includes/video_codec/: frame_processor.h  video_stream.h
src/: main.cpp
src/media/: media_file.cpp  media_file.h  video_stream.cpp  video_stream.h  video_writer.cpp  video_writer.h
src/processing/: simple_frame_processor.cpp  simple_frame_processor.h  video_writer_processor.cpp  video_writer_processor.h
